--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBV 4714/PBV 4714.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBV 4714/PBV 4714.html
@@ -51,10 +51,10 @@
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
             <h1>RENAULT KOLEOS 4X2 2.5 CVT</h1>
-            <p class="precio">$8,900</p>
+            <p class="precio">$7,500</p>
             <div class="detalles">
                 <span>2012</span>
-            <span>315.000 Kms</span>
+            <span>190.000 Kms</span>
                 <span>Placa: P</span>
             </div>
         </div>
@@ -126,7 +126,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/" type="video/mp4">
+                        <source src="imgs/koleos.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video
                     </video>
                 </a>
@@ -194,15 +194,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2024</span>
+                    <span class="dato-value">2025</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$160.40</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">Manabi - Rocafuerte</span>
+                    <span class="dato-value">GAD RUMINAHUI</span>
                 </div>
             </div>
         </div>
@@ -216,7 +216,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$121.00</span>
+                    <span class="dato-value">$146.00</span>
                 </div>
             </div>
         </div>
@@ -240,7 +240,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">4 dueños</span>
+                    <span class="dato-value">5 dueños</span>
                 </div>
             </div>
         </div>
