--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/GSM 5285/GSM 5285.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/GSM 5285/GSM 5285.html
@@ -54,7 +54,7 @@
             <p class="precio">$8,900</p>
             <div class="detalles">
                 <span>2015</span>
-                <span>150 Kms</span>
+                <span>163 Kms</span>
                 <span>Placa: G</span>
             </div>
         </div>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">150,000 km</span>
+                    <span class="info-value">163,000 km</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
@@ -127,7 +127,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/DUSTER.mp4" type="video/mp4">
+                        <source src="imgs/SONATA.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -200,7 +200,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$141.26</span>
+                    <span class="dato-value">$233.00</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
@@ -292,7 +292,7 @@
 document.getElementById('btnAcceso').addEventListener('click', function(e) {
     e.preventDefault();
     
-    const claveCorrecta = "gavilanes258";
+    const claveCorrecta = "gavilmotors";
     const claveIngresada = prompt("🔒 ACCESO AL SISTEMA LEGAL VEHICULAR\nIngrese la clave de autorización:");
     
     if (claveIngresada === claveCorrecta) {
