--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/GQD 0416/GQD 0416.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/GQD 0416/GQD 0416.html
@@ -110,7 +110,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>La Fiat Strada 1.2 Fire 2004 es una pickup compacta con motor 1.2L 8V (73 HP), transmisión manual y cabina corta (CB). Ideal para carga ligera y uso urbano, destaca por su bajo consumo y mantenimiento económico.</p>
+            <p>Este modelo combina un motor 2.0L ágil con transmisión manual y tracción delantera, con equipamiento amplio de seguridad y confort.</p>
         </div>
 
         <!-- Sección de video y contacto -->
