--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBU 5551/PBU 5551.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBU 5551/PBU 5551.html
@@ -51,20 +51,19 @@
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
             <h1>FORD FUSION HIBRIDO</h1>
-            <p class="precio">$3,900</p>
+            <p class="precio">$6,900</p>
             <div class="detalles">
-                <span>2004</span>
-                <span>330.000 Kms</span>
-                <span>Placa: A</span>
+                <span>2011</span>
+                <span>Placa: P</span>
             </div>
         </div>
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/foto1.jpeg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/foto2.jpeg" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/foto3.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO4.jpeg " alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -75,39 +74,35 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">fiat</span>
+                    <span class="info-value">FORD</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">STRADA FIRE 1242 MPI 8V CB CORTA</span>
+                    <span class="info-value">FUSION HIBRIDO</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
-                    <span class="info-value">Manual</span>
+                    <span class="info-value">Automatico</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">Pickup</span>
-                </div>
-                <div class="info-item">
-                    <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">330.000 km</span>
+                    <span class="info-value">Sedan</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2004</span>
+                    <span class="info-value">2011</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
-                    <span class="info-value">Gasolina</span>
+                    <span class="info-value">Hibrido</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Rojo</span>
+                    <span class="info-value">Blanco</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
-                    <span class="info-value">Azuay</span>
+                    <span class="info-value">Pichincha</span>
                 </div>
             </div>
         </div>
@@ -115,7 +110,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>La Fiat Strada 1.2 Fire 2004 es una pickup compacta con motor 1.2L 8V (73 HP), transmisión manual y cabina corta (CB). Ideal para carga ligera y uso urbano, destaca por su bajo consumo y mantenimiento económico.</p>
+            <p>El Ford Fusion Híbrido 2011 es un sedán mediano que combina un motor a gasolina de 2.5 litros con un motor eléctrico, ofreciendo un total de 191 caballos de fuerza. Usa una transmisión automática tipo CVT y tiene tracción delantera.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -125,7 +120,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/fiat.mp4" type="video/mp4">
+                        <source src="imgs/ddd.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -177,11 +172,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Estado:</span>
-                    <span class="dato-value">1 multa</span>
+                    <span class="dato-value">0 multa</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$80.00</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
             </div>
         </div>
@@ -191,15 +186,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2024</span>
+                    <span class="dato-value">2025</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$126.34</span>
+                    <span class="dato-value">$60.00</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">Quito - Puerto Quito</span>
+                    <span class="dato-value">Gad Ruminahui</span>
                 </div>
             </div>
         </div>
@@ -213,7 +208,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$61.00</span>
+                    <span class="dato-value">$286.00</span>
                 </div>
             </div>
         </div>
@@ -237,7 +232,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">8 dueños</span>
+                    <span class="dato-value">5 dueños</span>
                 </div>
             </div>
         </div>
