--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBB 3812/PBB 3812.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBB 3812/PBB 3812.html
@@ -51,7 +51,7 @@
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
             <h1>KIA RIO 1.4L EX 4P</h1>
-            <p class="precio">$5,800</p>
+            <p class="precio">$7.900</p>
             <div class="detalles">
                 <span>2008</span>
                 <span>170.000 Kms</span>
@@ -62,7 +62,7 @@
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
             <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/foto2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
             <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
             <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
