--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/ABC 9272/ABC 9272.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/ABC 9272/ABC 9272.html
@@ -50,20 +50,20 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>MAZDA 2 SEDAN 1.5 MT</h1>
-            <p class="precio">$6,600</p>
+            <h1>HYUNDAI I10 CM 5DR 1.1</h1>
+            <p class="precio">$6,900</p>
             <div class="detalles">
-                <span>2011</span>
-                <span>Placa: Q</span>
+                <span>2012</span>
+                <span>Placa: A</span>
             </div>
         </div>
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/foto1.jpg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/foto2.jpeg" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/foto3.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/foto4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -74,11 +74,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">MAZDA</span>
+                    <span class="info-value">HYUNDAI</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">MAZDA2 SEDAN 1.5 MT</span>
+                    <span class="info-value">I10 CM 5DR 1.1</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2011</span>
+                    <span class="info-value">2012</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -98,11 +98,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Celeste</span>
+                    <span class="info-value">Plateado</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
-                    <span class="info-value">Orellana</span>
+                    <span class="info-value">Azuay</span>
                 </div>
             </div>
         </div>
@@ -110,7 +110,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Mazda 2 Sedán 1.5 MT es un automóvil compacto con un motor Skyactiv-G de 1.5 litros</p>
+            <p>El Hyundai i10 1.1 de 2012, versión de 5 puertas, es un auto compacto diseñado para la ciudad, con tracción delantera y motor de gasolina de 1086 cc (4 cilindros en línea) que entrega alrededor de 69 caballos de fuerza</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -120,7 +120,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/dada.mp4" type="video/mp4">
+                        <source src="imgs/I10.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -186,15 +186,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2024</span>
+                    <span class="dato-value">2025</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$130.97</span>
+                    <span class="dato-value">$74.22</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">FRANCISCO DE ORELLANA</span>
+                    <span class="dato-value">Quito - Bicentenario</span>
                 </div>
             </div>
         </div>
@@ -208,7 +208,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$41.00</span>
+                    <span class="dato-value">$61.00</span>
                 </div>
             </div>
         </div>
@@ -232,7 +232,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">3 dueños</span>
+                    <span class="dato-value">4 dueños</span>
                 </div>
             </div>
         </div>
