--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/GQD 0416/GQD 0416.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/GQD 0416/GQD 0416.html
@@ -94,7 +94,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
-                    <span class="info-value">Gasolina</span>
+                    <span class="info-value">Diesel</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
