--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/ABH 3184/ABH 3184.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/ABH 3184/ABH 3184.html
@@ -51,7 +51,7 @@
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
             <h1>CHERY A13T TIGGO2 LUX AC 1.5 5P 4X2 TM</h1>
-            <p class="precio">$9,500</p>
+            <p class="precio">$8,900</p>
             <div class="detalles">
                 <span>2019</span>
                 <span>140 Kms</span>
@@ -196,11 +196,11 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$75.69</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">Chone - Manabì</span>
+                    <span class="dato-value">GAD PUERTO QUITO</span>
                 </div>
             </div>
         </div>
@@ -210,7 +210,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Detalle:</span>
-                    <span class="dato-value">Calendarizacion y no se presento</span>
+                    <span class="dato-value">Impuestos</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
@@ -224,11 +224,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Total:</span>
-                    <span class="dato-value">1 infracciones</span>
+                    <span class="dato-value">infracciones</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Monto:</span>
-                    <span class="dato-value">$120.00</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
             </div>
         </div>
@@ -238,7 +238,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">1 dueño</span>
+                    <span class="dato-value">3 dueño</span>
                 </div>
             </div>
         </div>
