--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBJ 4528/PBJ 4528.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBJ 4528/PBJ 4528.html
@@ -60,10 +60,10 @@
 
         <!-- Carrusel de imágenes -->
         <div class="carrusel">
-            <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
-            <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
-            <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/PRIUS1.jpeg" alt="Imagen 1" class="carrusel-img active">
+            <img src="imgs/PRIUS2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/PRIUS3.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/PRIUS4.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -151,6 +151,9 @@
                         </a>
                         <a href="https://wa.me/593969008638" class="btn-contacto" target="_blank">
                             <i class="bi bi-whatsapp"></i> ASESOR DAVID
+                        </a>
+                        <a href="https://wa.me/593995357375" class="btn-contacto" target="_blank">
+                            <i class="bi bi-whatsapp"></i> ASESORA PATRICIA
                         </a>
                         
                         <a href="https://wa.me/593987576160" class="btn-contacto" target="_blank">
