--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/AFH 0985/AFH 0985.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/AFH 0985/AFH 0985.html
@@ -157,6 +157,9 @@
                         <a href="https://wa.me/593969008638" class="btn-contacto" target="_blank">
                             <i class="bi bi-whatsapp"></i> ASESOR DAVID
                         </a>
+                        <a href="https://wa.me/593995357375" class="btn-contacto" target="_blank">
+                            <i class="bi bi-whatsapp"></i> ASESORA PATRICIA
+                        </a>
                         
                         <a href="https://wa.me/593987576160" class="btn-contacto" target="_blank">
                             <i class="bi bi-whatsapp"></i> ASESOR BYRON
