--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/TDQ 0675/TDQ 0675.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/TDQ 0675/TDQ 0675.html
@@ -110,7 +110,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Hyundai i10 1.1 de 2012, versión de 5 puertas, es un auto compacto diseñado para la ciudad, con tracción delantera y motor de gasolina de 1086 cc (4 cilindros en línea) que entrega alrededor de 69 caballos de fuerza</p>
+            <p>El Suzuki Grand Vitara SZ del año 2009 es un SUV compacto que combina versatilidad urbana y capacidad para terrenos más exigentes. Por lo general viene con motor de 2.0 litros a gasolina, tracción delantera (en algunas versiones) o 4×4, y transmisión manual</p>
         </div>
 
         <!-- Sección de video y contacto -->
