--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/HBA 6476/HBA 6476.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/HBA 6476/HBA 6476.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
-                    <span class="info-value">Pichincha</span>
+                    <span class="info-value">Chimborazo</span>
                 </div>
             </div>
         </div>
