--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PCI 3555/PCI 3555.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PCI 3555/PCI 3555.html
@@ -197,7 +197,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">Quito - Bicentenario</span>
+                    <span class="dato-value">Sucumbios</span>
                 </div>
             </div>
         </div>
@@ -235,7 +235,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">4 dueños</span>
+                    <span class="dato-value">1 dueño</span>
                 </div>
             </div>
         </div>
