--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBT 1334/PBT 1334.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBT 1334/PBT 1334.html
@@ -50,11 +50,11 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>HYUNDAI I10 CM 5DR 1.1</h1>
-            <p class="precio">$6,900</p>
+            <h1>RENAULT LOGAN 1.6 M/T</h1>
+            <p class="precio">$5,900</p>
             <div class="detalles">
-                <span>2012</span>
-                <span>Placa: A</span>
+                <span>2011</span>
+                <span>Placa: P</span>
             </div>
         </div>
 
@@ -74,11 +74,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">HYUNDAI</span>
+                    <span class="info-value">RENAULT</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">I10 CM 5DR 1.1</span>
+                    <span class="info-value">LOGAN 1.6 M/T</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2012</span>
+                    <span class="info-value">2011</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -98,11 +98,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Plateado</span>
+                    <span class="info-value">Blanco</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
-                    <span class="info-value">Azuay</span>
+                    <span class="info-value">Pichincha</span>
                 </div>
             </div>
         </div>
@@ -110,7 +110,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Hyundai i10 1.1 de 2012, versión de 5 puertas, es un auto compacto diseñado para la ciudad, con tracción delantera y motor de gasolina de 1086 cc (4 cilindros en línea) que entrega alrededor de 69 caballos de fuerza</p>
+            <p>El Renault Logan 1.6 M/T 2011 es un sedán compacto de cuatro puertas, con motor 1.6 litros de aspiración natural, transmisión manual y tracción delantera. Está orientado a quienes buscan un automóvil funcional, con buen espacio interior y maletero, confiabilidad mecánica y un costo de mantenimiento moderado.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -120,7 +120,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/I10.mp4" type="video/mp4">
+                        <source src="imgs/LOGAN.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -189,15 +189,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2025</span>
+                    <span class="dato-value">2024</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$74.22</span>
+                    <span class="dato-value">$101.62</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">Quito - Bicentenario</span>
+                    <span class="dato-value">PEDERNALES</span>
                 </div>
             </div>
         </div>
@@ -211,7 +211,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$61.00</span>
+                    <span class="dato-value">$50.00</span>
                 </div>
             </div>
         </div>
@@ -221,11 +221,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Total:</span>
-                    <span class="dato-value">0 infracciones</span>
+                    <span class="dato-value">1 infracciones</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Monto:</span>
-                    <span class="dato-value">$00.00</span>
+                    <span class="dato-value">$47.00</span>
                 </div>
             </div>
         </div>
@@ -235,7 +235,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">4 dueños</span>
+                    <span class="dato-value">2 dueños</span>
                 </div>
             </div>
         </div>
