--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PRF 0654/PRF 0654.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PRF 0654/PRF 0654.html
@@ -50,12 +50,11 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>CHEVROLET OPTRA 1.8L T/M LIMITED</h1>
+            <h1>HYUNDAI I10 CM 5DR 1.1</h1>
             <p class="precio">$6,900</p>
             <div class="detalles">
-                <span>2008</span>
-                <span>194.000 Kms</span>
-                <span>Placa: H</span>
+                <span>2012</span>
+                <span>Placa: A</span>
             </div>
         </div>
 
@@ -75,11 +74,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">CHEVROLET</span>
+                    <span class="info-value">HYUNDAI</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">OPTRA 1.8L T/M LIMITED</span>
+                    <span class="info-value">I10 CM 5DR 1.1</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -87,15 +86,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">SEDAN</span>
-                </div>
-                <div class="info-item">
-                    <span class="info-label">Kilometraje:</span>
-                    <span class="info-value">194.000 km</span>
+                    <span class="info-value">sedan</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2008</span>
+                    <span class="info-value">2012</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -103,11 +98,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">AZUL</span>
+                    <span class="info-value">Plateado</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
-                    <span class="info-value">Chimborazo</span>
+                    <span class="info-value">Azuay</span>
                 </div>
             </div>
         </div>
@@ -115,7 +110,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Chevrolet Optra 1.8L T/M Limited del 2008 es un sedán compacto conocido por su espacio interior y buen consumo de combustible, especialmente en comparación con otros vehículos de su segmento.</p>
+            <p>El Hyundai i10 1.1 de 2012, versión de 5 puertas, es un auto compacto diseñado para la ciudad, con tracción delantera y motor de gasolina de 1086 cc (4 cilindros en línea) que entrega alrededor de 69 caballos de fuerza</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -125,7 +120,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/123.mp4" type="video/mp4">
+                        <source src="imgs/I10.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -164,7 +159,6 @@
                         <a href="https://wa.me/593987576160" class="btn-contacto" target="_blank">
                             <i class="bi bi-whatsapp"></i> ASESOR BYRON
                         </a>
-                         
 <!-- Botón de acceso (mantén el que ya tienes) -->
 <a href="#" class="btn-contacto" id="btnAcceso">
     <i class="bi bi-shield-fill-exclamation"></i> Consultas (solo personal autorizado)
@@ -195,15 +189,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2024</span>
+                    <span class="dato-value">2025</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$158.45</span>
+                    <span class="dato-value">$74.22</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">MANCOMUNIDAD IBARRA</span>
+                    <span class="dato-value">Quito - Bicentenario</span>
                 </div>
             </div>
         </div>
@@ -217,7 +211,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$66.00</span>
+                    <span class="dato-value">$61.00</span>
                 </div>
             </div>
         </div>
@@ -241,7 +235,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">6 dueños</span>
+                    <span class="dato-value">4 dueños</span>
                 </div>
             </div>
         </div>
