SZ Y SOUEAST + ASESORA PAMELA EN REGISTRO DE PAGINA WEB

--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PFP 2617/PFP 2617.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PFP 2617/PFP 2617.html
@@ -50,11 +50,11 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>HYUNDAI I10 CM 5DR 1.1</h1>
-            <p class="precio">$6,900</p>
+            <h1>KIA SOLUTO LX AC 1.4 4P 4X2 TM</h1>
+            <p class="precio">$14,900</p>
             <div class="detalles">
-                <span>2012</span>
-                <span>Placa: A</span>
+                <span>2026</span>
+                <span>Placa: P</span>
             </div>
         </div>
 
@@ -74,11 +74,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">HYUNDAI</span>
+                    <span class="info-value">KIA</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">I10 CM 5DR 1.1</span>
+                    <span class="info-value">SOLUTO LX AC 1.4 4P 4X2 TM</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2012</span>
+                    <span class="info-value">2026</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -98,11 +98,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Plateado</span>
+                    <span class="info-value">Crema</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
-                    <span class="info-value">Azuay</span>
+                    <span class="info-value">Pichincha</span>
                 </div>
             </div>
         </div>
@@ -110,7 +110,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Hyundai i10 1.1 de 2012, versión de 5 puertas, es un auto compacto diseñado para la ciudad, con tracción delantera y motor de gasolina de 1086 cc (4 cilindros en línea) que entrega alrededor de 69 caballos de fuerza</p>
+            <p>El Kia Soluto LX AC 1.4 4P 4×2 TM (modelo 2026) es un sedán compacto de cuatro puertas con motor 1.4 litros a gasolina, tracción delantera (4×2) y transmisión manual. Incorpora aire acondicionado y un diseño eficiente, práctico para la ciudad, con buen espacio interior y bajo costo operativo.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -120,7 +120,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/I10.mp4" type="video/mp4">
+                        <source src="imgs/soluto 2026.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -159,6 +159,10 @@
                         <a href="https://wa.me/593987576160" class="btn-contacto" target="_blank">
                             <i class="bi bi-whatsapp"></i> ASESOR BYRON
                         </a>
+
+                        <a href="https://wa.me/593990073550" class="btn-contacto" target="_blank">
+                            <i class="bi bi-whatsapp"></i> ASESORA PAMELA
+                        </a>
 <!-- Botón de acceso (mantén el que ya tienes) -->
 <a href="#" class="btn-contacto" id="btnAcceso">
     <i class="bi bi-shield-fill-exclamation"></i> Consultas (solo personal autorizado)
@@ -193,7 +197,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$74.22</span>
+                    <span class="dato-value">$305.00</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
@@ -211,7 +215,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$61.00</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
             </div>
         </div>
@@ -235,7 +239,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">4 dueños</span>
+                    <span class="dato-value">1 dueños</span>
                 </div>
             </div>
         </div>
