--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/ABF 1539/ABF 1539.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/ABF 1539/ABF 1539.html
@@ -164,6 +164,10 @@
                         <a href="https://wa.me/593987576160" class="btn-contacto" target="_blank">
                             <i class="bi bi-whatsapp"></i> ASESOR BYRON
                         </a>
+
+                        <a href="https://wa.me/593990073550" class="btn-contacto" target="_blank">
+                            <i class="bi bi-whatsapp"></i> ASESORA PAMELA
+                        </a>
 <!-- Botón de acceso (mantén el que ya tienes) -->
 <a href="#" class="btn-contacto" id="btnAcceso">
     <i class="bi bi-shield-fill-exclamation"></i> Consultas (solo personal autorizado)
