--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/HBC 4441/HBC 4441.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/HBC 4441/HBC 4441.html
@@ -166,6 +166,10 @@
                         <a href="https://wa.me/593987576160" class="btn-contacto" target="_blank">
                             <i class="bi bi-whatsapp"></i> ASESOR BYRON
                         </a>
+
+                        <a href="https://wa.me/593990073550" class="btn-contacto" target="_blank">
+                            <i class="bi bi-whatsapp"></i> ASESORA PAMELA
+                        </a>
                         
                         <!-- Botón de acceso (mantén el que ya tienes) -->
 <a href="#" class="btn-contacto" id="btnAcceso">
