--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PRF 0654/PRF 0654.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PRF 0654/PRF 0654.html
@@ -50,11 +50,11 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>HYUNDAI I10 CM 5DR 1.1</h1>
-            <p class="precio">$6,900</p>
+            <h1>VOLKSWAGEN GOL GLI</h1>
+            <p class="precio">$2,900</p>
             <div class="detalles">
-                <span>2012</span>
-                <span>Placa: A</span>
+                <span>1995</span>
+                <span>Placa: P</span>
             </div>
         </div>
 
@@ -74,11 +74,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">HYUNDAI</span>
+                    <span class="info-value">VOLKSWAGEN</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">I10 CM 5DR 1.1</span>
+                    <span class="info-value">GOL GLI</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">sedan</span>
+                    <span class="info-value">Hatchback</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
@@ -98,11 +98,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Plateado</span>
+                    <span class="info-value">Crema</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
-                    <span class="info-value">Azuay</span>
+                    <span class="info-value">Pichincha</span>
                 </div>
             </div>
         </div>
@@ -110,7 +110,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Hyundai i10 1.1 de 2012, versión de 5 puertas, es un auto compacto diseñado para la ciudad, con tracción delantera y motor de gasolina de 1086 cc (4 cilindros en línea) que entrega alrededor de 69 caballos de fuerza</p>
+            <p>El Volkswagen Gol GLI 1995 es un hatchback compacto de segunda generación, equipado con motor a gasolina y enfocado en ofrecer buena economía de combustible y mantenimiento sencillo. Su versión GLI incorpora un nivel de equipamiento superior dentro de la línea, siendo un vehículo práctico, durable y funcional para el uso diario.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -120,7 +120,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/I10.mp4" type="video/mp4">
+                        <source src="imgs/s.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -159,6 +159,10 @@
                         <a href="https://wa.me/593987576160" class="btn-contacto" target="_blank">
                             <i class="bi bi-whatsapp"></i> ASESOR BYRON
                         </a>
+
+                        <a href="https://wa.me/593990073550" class="btn-contacto" target="_blank">
+                            <i class="bi bi-whatsapp"></i> ASESORA PAMELA
+                        </a>
 <!-- Botón de acceso (mantén el que ya tienes) -->
 <a href="#" class="btn-contacto" id="btnAcceso">
     <i class="bi bi-shield-fill-exclamation"></i> Consultas (solo personal autorizado)
@@ -193,11 +197,11 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$74.22</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">Quito - Bicentenario</span>
+                    <span class="dato-value">TOSAGUA</span>
                 </div>
             </div>
         </div>
@@ -211,7 +215,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$61.00</span>
+                    <span class="dato-value">$196.00</span>
                 </div>
             </div>
         </div>
@@ -235,7 +239,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">4 dueños</span>
+                    <span class="dato-value">10 dueños</span>
                 </div>
             </div>
         </div>
