--- a/CATEGORIAS-VEHICULOS/index.html
+++ b/CATEGORIAS-VEHICULOS/index.html
@@ -343,8 +343,8 @@
                 </p>
 
                 <div class="bonificaciones-list">
-                    <li><i class="fas fa-gas-pump"></i> CARGA COMPLETA DE COMBUSTIBLE</li>
-                    <li><i class="fas fa-file-signature"></i> GASTOS DE NOTARÍA</li>
+                    <li><i class="fas fa-gas-pump"></i> $10 DE COMBUSTIBLE</li>
+                    <li><i class="fas fa-kit-medical"></i> KIT DE EMERGENCIA</li>
                     <li><i class="fas fa-tools"></i> LAVADO PREMIUM</li>
                     <li><i class="fas fa-pizza-slice"></i> PIZZA FAMILIAR</li>
                     <li><i class="fa-solid fa-hat-cowboy"></i> GORRAS GAVILMOTORS</li>
