--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PDN 8429/PDN 8429.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PDN 8429/PDN 8429.html
@@ -50,7 +50,7 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>MITSUBISHI </h1>
+            <h1>MITSUBISHI L200 HIRIDER AC 2.4 CD 4X2 TM DIESEL</h1>
             <p class="precio">$25,900</p>
             <div class="detalles">
                 <span>2020</span>
