--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBP 1625/PBP 1625.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBP 1625/PBP 1625.html
@@ -54,7 +54,7 @@
             <p class="precio">$7,900</p>
             <div class="detalles">
                 <span>2007</span>
-                <span>Placa: A</span>
+                <span>Placa: P</span>
             </div>
         </div>
 
