--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PDC 8296/PDC 8296.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PDC 8296/PDC 8296.html
@@ -54,7 +54,7 @@
             <p class="precio">$13,900</p>
             <div class="detalles">
                 <span>2019</span>
-                <span>Placa: A</span>
+                <span>Placa: P</span>
             </div>
         </div>
 
