--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PBP 1625/PBP 1625.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PBP 1625/PBP 1625.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
-                    <span class="info-value">Manual</span>
+                    <span class="info-value">Automatica</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
