--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PDI 0838/PDI 0838.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PDI 0838/PDI 0838.html
@@ -52,7 +52,7 @@
         <div class="info-destacada">
             <h1>FIAT PALIO 2V ELX 5P 1.6 MPI 16V</h1>
             <p class="precio">$3,900</p>
-            <div class="detalles">
+            <div class="detalles">  
                 <span>2003</span>
                 <span>Placa: P</span>
             </div>
@@ -110,7 +110,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>l Fiat Palio ELX 2003 1.6 MPI 16V es un hatchback compacto de 5 puertas diseñado para ofrecer practicidad, economía y funcionalidad en ciudad y carretera. Su motor de 1.6 litros</p>
+            <p>El Fiat Palio ELX 2003 1.6 MPI 16V es un hatchback compacto de 5 puertas diseñado para ofrecer practicidad, economía y funcionalidad en ciudad y carretera. Su motor de 1.6 litros</p>
         </div>
 
         <!-- Sección de video y contacto -->
